app/assets/stylesheets/app.css
html, body {
  height: 100%;
  width: 100%;
}

.flex-box {
  width: 100%;
  height: 100%;
  padding: 5px;
  margin: 0;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content:space-around;
}

.flex-box.container-column {
  -webkit-flex-flow: column nowrap;
  flex-flow: column nowrap;  
}

.flex-box.container-row {  
  -webkit-flex-flow: row nowrap;
  flex-flow: row nowrap;  
}

.flex-item {  
  background: white;  
  margin: 0;
  padding: 0;

  color: black;  
  font-size: 20px;
  text-align: left;

  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1 ;   
}

.card-block {
  margin: 0;
  padding: 1px;
}

.card {
  border:1px solid grey;
}

.card-header {
  height:35px;
  font-size: 20px;
  padding:2px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.btn {
    background:transparent;
    border:none;
    box-shadow:none;    
}


.grabber {
  border: 0;
  background: white;  
}

.grabber.column {
  width:100%;
  height: 5px;
  cursor: row-resize;
  vertical-align: middle;
}

.grabber.row {
  height:100%;
  width: 5px;
  cursor: ew-resize;
  margin: 0px auto;
}

.nav-tabs > li > a
{
    padding-top: 1px;
    padding-bottom: 1px;
}


.fill {
  width: 100%;
  height: 100%;
}



.visualise {

  overflow: hidden;
}

.mobilise {

  overflow: hidden;
}


.background {
  fill: white;
}

.node {
  stroke-width: 1.5px;
  cursor: move;
  fill: #3366ff;
}

.group {
  stroke: #fff;
  stroke-width: 1.5px;
  cursor: move;
  opacity: 0.7;
}

.link {
  stroke: #555;
  stroke-width: 3px;
  stroke-opacity: 1;

}

.flowlabel {
  fill: white;
  font-family: Verdana;
  font-size: 25px;
  text-anchor: middle;
  cursor: move;
}

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  border-radius: 2px;
}

.main-header {
  height:45px;
  font-size: 20px;
  padding:2px;
  background-color: #e6ffee;
}

.tab-container {
  width:100%;
  height:100%;
}

.flex-panel-parent {
  width: 100%;
  height: 100%;
  display:-webkit-flex;
  display:flex;
  flex-direction:column
}

.flex-row-parent {
  width: 100%;
  height: 100%;
  display:-webkit-flex;
  display:flex;
  flex-direction:row
}

.flex-panel {
  -webkit-flex: 1;
  flex: 1 ;
}

.flex-panel-30 {
  -webkit-flex: 1;
  flex: .3 ;
}

.flex-panel-70 {
  -webkit-flex: 1;
  flex: 1 ;
}

.tab-content {
  -webkit-flex: 1;
  flex: 1 ;
}

.tab-content > .active {
  display:-webkit-flex;
  display:flex;
}

.table-scrollable {
  margin: 0;
  padding: 0;
}

.table-container {
  margin: 0;
  padding: 0;
  overflow-y: scroll;
}

.btn.red {
  color:red
}

.btn.green {
  color:green
}

.btn.black {
  color:black
}

.info-column {
  width: 32px;
  align-content: center;
}

.padding {
  padding: 2px;
  margin: 2px;
}

.ui-dropdown .ui-dropdown-trigger {
  width: 30px;
}

.ui-dropdown {
  padding-right: 20px;
}

